Code refactored by go lint and moved register route to auth.
