# internal/user/user_handler.go
@@ -8,64 +8,37 @@ import (
 	"github.com/go-chi/chi/v5"
 )
 
-type UserHandler struct {
-	Service UserService
+// Handler struct to hold the user service and provide handler functions
+type Handler struct {
+	service Service
 }
 
-func NewUserHandler(s UserService) *UserHandler {
-	return &UserHandler{
-		Service: s,
+// NewHandler initialize and return the user Handler
+func NewHandler(s Service) *Handler {
+	return &Handler{
+		service: s,
 	}
 }
 
-// @Summary      Register a new user
-// @Description  Register a new user with the provided details
-// @Tags         user
-// @Accept       json
-// @Produce      json
-// @Param        body  body  CreateUserReq  true  "User registration request"
-// @Success      200  {object}  UserRes
-// @Failure      400  {object}  utils.MessageRes
-// @Router       /users/register [post]
-func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
-	var createUserReq CreateUserReq
-	if err := utils.ReadFromRequest(r, &createUserReq); err != nil {
-		utils.WriterErrorResponse(w, http.StatusBadRequest, err.Error())
-		return
-	}
-
-	if err := utils.Validate.Struct(createUserReq); err != nil {
-		utils.WriterErrorResponse(w, http.StatusBadRequest, err.Error())
-		return
-	}
-
-	res, err := h.Service.CreateUser(r.Context(), &createUserReq)
-	if err != nil {
-		utils.WriterErrorResponse(w, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	utils.WriteResponse(w, http.StatusOK, res)
-}
-
+// GetUser       godoc
 // @Summary      Get User Details
 // @Description  Get User Details by provided ID in url
 // @Tags         user
 // @Accept       json
 // @Produce      json
 // @Param        id  path  int  true  "User ID"
-// @Success      200  {object}  UserRes
+// @Success      200  {object}  User
 // @Failure      400  {object}  utils.MessageRes
-// @Router       /users/{id} [post]
-func (h *UserHandler) GetUser(w http.ResponseWriter, r *http.Request) {
-	userIDstr := chi.URLParam(r, "id")
+// @Router       /users/{user_id} [post]
+func (h *Handler) GetUser(w http.ResponseWriter, r *http.Request) {
+	userIDstr := chi.URLParam(r, "user_id")
 	userID, err := strconv.Atoi(userIDstr)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	res, err := h.Service.GetUserById(r.Context(), userID)
+	res, err := h.service.GetUserByID(r.Context(), userID)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusInternalServerError, err.Error())
 		return
@@ -74,18 +47,19 @@ func (h *UserHandler) GetUser(w http.ResponseWriter, r *http.Request) {
 	utils.WriteResponse(w, http.StatusOK, res)
 }
 
+// UpdateUser    godoc
 // @Summary      Update User Details
 // @Description  Update User Details by provided ID in url and details in body
-// @Tags         user
+// @Tags         User
 // @Accept       json
 // @Produce      json
 // @Param        id  path  int  true  "User ID"
 // @Param        body  body  UpdateUserReq  true  "User Update request"
-// @Success      200  {object}  UserRes
+// @Success      200  {object}  User
 // @Failure      400  {object}  utils.MessageRes
-// @Router       /users/{id}/update [put]
-func (h *UserHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
-	userIDstr := chi.URLParam(r, "id")
+// @Router       /users/{user_id}/update [put]
+func (h *Handler) UpdateUser(w http.ResponseWriter, r *http.Request) {
+	userIDstr := chi.URLParam(r, "user_id")
 	userID, err := strconv.Atoi(userIDstr)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusBadRequest, err.Error())
@@ -104,7 +78,7 @@ func (h *UserHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	res, err := h.Service.UpdateUser(r.Context(), &updateUserReq)
+	res, err := h.service.UpdateUser(r.Context(), &updateUserReq)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusInternalServerError, err.Error())
 		return
@@ -113,18 +87,19 @@ func (h *UserHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	utils.WriteResponse(w, http.StatusOK, res)
 }
 
+// ChangePassword godoc
 // @Summary      Reset User Password
 // @Description  Reset User Password by provided ID in url and password in body
-// @Tags         user
+// @Tags         User
 // @Accept       json
 // @Produce      json
 // @Param        id  path  int  true  "User ID"
 // @Param        body  body  ResetPasswordReq  true  "Password change request"
 // @Success      200  {object}  utils.MessageRes
 // @Failure      400  {object}  utils.MessageRes
-// @Router       /users/{id}/password-reset [put]
-func (h *UserHandler) ResetPassword(w http.ResponseWriter, r *http.Request) {
-	userIDstr := chi.URLParam(r, "id")
+// @Router       /users/{user_id}/password-reset [put]
+func (h *Handler) ChangePassword(w http.ResponseWriter, r *http.Request) {
+	userIDstr := chi.URLParam(r, "user_id")
 	userID, err := strconv.Atoi(userIDstr)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusBadRequest, err.Error())
@@ -139,7 +114,7 @@ func (h *UserHandler) ResetPassword(w http.ResponseWriter, r *http.Request) {
 
 	resetPasswordReq.ID = int64(userID)
 
-	res, err := h.Service.ResetUserPassword(r.Context(), &resetPasswordReq)
+	res, err := h.service.ChangeUserPassword(r.Context(), &resetPasswordReq)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusInternalServerError, err.Error())
 		return
@@ -148,24 +123,25 @@ func (h *UserHandler) ResetPassword(w http.ResponseWriter, r *http.Request) {
 	utils.WriteResponse(w, http.StatusOK, res)
 }
 
+// DeleteUser    godoc
 // @Summary      Delete User Details
 // @Description  Delete User Details by provided ID in url
-// @Tags         user
+// @Tags         User
 // @Accept       json
 // @Produce      json
 // @Param        id  path  int  true  "User ID"
 // @Success      200  {object}  utils.MessageRes
 // @Failure      400  {object}  utils.MessageRes
-// @Router       /users/{id}/delete [delete]
-func (h *UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
-	userIDstr := chi.URLParam(r, "id")
+// @Router       /users/{user_id}/delete [delete]
+func (h *Handler) DeleteUser(w http.ResponseWriter, r *http.Request) {
+	userIDstr := chi.URLParam(r, "user_id")
 	userID, err := strconv.Atoi(userIDstr)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	res, err := h.Service.DeleteUser(r.Context(), userID)
+	res, err := h.service.DeleteUser(r.Context(), userID)
 	if err != nil {
 		utils.WriterErrorResponse(w, http.StatusInternalServerError, err.Error())
 		return
