# utils/api_responses.go
@@ -1,5 +1,6 @@
 package utils
 
+// MessageRes struct for default response success status and message
 type MessageRes struct {
 	Success bool   `json:"success"`
 	Message string `json:"message"`
